navigate to dictionries page + overflow dictionary name fix

--- a/client/src/styles/base/base.scss
+++ b/client/src/styles/base/base.scss
@@ -1,3 +1,5 @@
+@import '../constans.scss';
+
 p {
     margin: 0;
     padding: 0;
@@ -11,6 +13,14 @@ li, ul {
 
 a {
     text-decoration: none;
+}
+
+.def-btn {
+    background-color: $btns-color;
+    font-size: $font-size-24;
+    border: 1px solid $border-color;
+    border-radius: 15px;
+    color: $default-color;
 }
 
 .close {
