--- a/client/src/styles/components/SignOut.scss
+++ b/client/src/styles/components/SignOut.scss
@@ -7,5 +7,6 @@
     &__btn {
         background: none;
         color: #fff;
+        border: none;
     }
 }
